# graph_testing_harness

./: LICENSE  README.md  pyproject.toml
data/: memgraph_input.txt
databases/: IMCI_schema.cypherl  IMCI_schema.graphml
results/: IMCI_qamc.json
src/: generate_cypher.py  generate_graph.py  generate_questions.py  inference.py
