[project]
name = "imci-graph-testing-harness"
version = "0.1.0"
description = "A graph-based LLM testing harness for WHO IMCI medical guidelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "aisuite>=0.1",
    "pydantic>=2.12.5",
    "openai>=2.29.0",
    "anthropic>=0.86.0",
    "matplotlib",
    "seaborn",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
